--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://propainacessories.github.io/My-Portfolio/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
