--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://propainacessories.github.io/My-Portfolio/",
+  "homepage": "https://propainacessories.github.io/my-portfolio/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
