--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
-    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
