--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "homepage": "https://propainacessories.github.io/my-portfolio",
   "name": "react-portfolio",
   "version": "0.1.0",
+  "engines": {
+    "node": "18.12.1"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,7 +18,7 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
